--- a/public_html/projeto-glass-html5/_css/estilo.css
+++ b/public_html/projeto-glass-html5/_css/estilo.css
@@ -57,8 +57,28 @@ nav#menu li {
     background-color: #dddddd;
     padding: 10px;
     margin: 2px;
+    -webkit-transition: background-color .4s;
+    -moz-transition: background-color .4s;
+    -ms-transition: background-color .4s;
+    -o-transition: background-color .4s;
+    transition: background-color .4s;
+
+}
+
+nav#menu li:hover {
+    background-color: #606060;
 }
 
 nav#menu h1 {
     display: none;
+}
+
+nav#menu a {
+    color: black;
+    text-decoration: none;
+}
+
+nav#menu a:hover {
+    color: white;
+    text-decoration: underline;
 }
