--- a/public_html/projeto-glass-html5/_css/estilo.css
+++ b/public_html/projeto-glass-html5/_css/estilo.css
@@ -1,12 +1,27 @@
 @charset "UTF-8";
 
 body {
-    background-color: hsla(165, 81%, 93%, 0.5);
+    background-color: #dddddd;
     color: rgba(0, 0, 0, 1);
 }
+
+div#interface {
+    width: 900px;
+    background-color: white;
+    margin: -20px auto 0px auto;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.85);
+    padding: 10px;
+}
+
 p {
     text-align: justified;
     text-indent: 50px;
+}
+
+header#cabecalho img#icone {
+    position: absolute;
+    left: 750px;
+    top: 40px;
 }
 
 /* Formatação de imagens com legendas */
@@ -82,3 +97,4 @@ nav#menu a:hover {
     color: white;
     text-decoration: underline;
 }
+
