--- a/public_html/projeto-glass-html5/_css/estilo.css
+++ b/public_html/projeto-glass-html5/_css/estilo.css
@@ -11,7 +11,7 @@ body {
 }
 
 div#interface {
-    width: 900px;
+    width: 90%;
     background-color: white;
     margin: -20px auto 0px auto;
     box-shadow: 0px 0px 10px rgba(0,0,0,.85);
@@ -138,7 +138,7 @@ nav#menu a:hover {
 
 section#corpo {
     display: block;
-    width: 500px;
+    width: 66%;
     float: left;
     border-right: 1px solid #606060;
     padding-right: 15px;
@@ -219,7 +219,7 @@ table#tabelaspec caption span {
 
 aside#lateral {
     display: block;
-    width: 350px;
+    width: 29%;
     float: right;
     background-color: #dddddd;
     padding: 10pt;
