--- a/public_html/projeto-glass-html5/_css/estilo.css
+++ b/public_html/projeto-glass-html5/_css/estilo.css
@@ -34,14 +34,14 @@ a:hover {
 
 header#cabecalho img#icone {
     position: absolute;
-    left: 780px;
-    top: 70px;
+    right: 8%;
+    top: 5%;
 }
 
 header#cabecalho {
     border-bottom: 1px #606060 solid;
     height: 150px;
-    background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 90px;
+    background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 90px;;
 }
 
 header#cabecalho h1 {
@@ -102,7 +102,7 @@ nav#menu ul{
     text-transform: uppercase;
     position: absolute;
     top: -20px;
-    left: 300px;
+    right: 7%;
 }
 
 nav#menu li {
